--- a/app/os/globals.css
+++ b/app/os/globals.css
@@ -45,3 +45,17 @@ svg path, svg circle, svg rect, svg line, svg polygon, svg polyline {
   font-family: "nfm";
   src: url("/public/fonts/nfm.ttf");
 }
+
+.wmContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.wmApp {
+  display: flex;
+  flex: 1;
+}
